# gpu-studies

gcn/1-intro/: Makefile  README.md  hsa_memory.hpp  hsa_runner.cpp  hsa_runner.hpp  hsa_utils.cpp  hsa_utils.hpp  test.cpp  test.s
gcn/1-max-pooling/: MaxPooling.radproj  MaxPooling.sln  debug.sh  hsa_runner.cpp  hsa_runner.hpp
gcn/2-max-pooling/: Makefile  MaxPooling.radproj.user.json  README.md  hsa_memory.hpp  hsa_runner.cpp  hsa_runner.hpp  hsa_utils.cpp  hsa_utils.hpp  max_pooling.cpp  max_pooling.s
graphics-fundamentals/ray-tracing/: .gitignore  CMakeLists.txt  README.md
hello/: CMakeLists.txt  README.md  cl_utils.h  io.h  square.cl
matrix_mul/: CMakeLists.txt  README.md  main.c  mkmatrices  simple.cl  tiled.cl  wideloads.cl
matrix_mul_rs/: .gitignore  Cargo.toml  subgroups.cl
matrix_mul_rs/src/: main.rs
opencl/hello/: cl_utils.c  main.c
opencl/matrix_mul/: .gitignore  README.md  io.h  main.c  pad_cols.cl  runprofile  tiled.cl
opencl/matrix_mul_rs/: mkmatrices  wideloads.cl
vulkan/: README.md
webgl/4-blender-model-export/: Cargo.toml  README.md  cube.ply  index.html  index.js
webgl/4-blender-model-export/pkg/: blender_model_export.js  blender_model_export_bg.wasm
webgl/4-blender-model-export/shaders/: fragment.glsl  vertex.glsl
webgl/4-blender-model-export/src/: gl.rs  interop.rs  lib.rs  model.rs  transform.rs
webgl/6-sine-wave/: .gitignore  Cargo.toml  index.html  index.js  plane100.ply
webgl/6-sine-wave/pkg/: README.md  sine_wave.js  sine_wave_bg.wasm
webgl/6-sine-wave/shaders/: fragment.glsl  vertex.glsl
webgl/6-sine-wave/src/: gl.rs  lib.rs  transform.rs
(+59 files in other folders)
