[package]
name = "blender-model-export"
version = "0.1.0"
authors = ["timlathy <tim.labushev@gmail.com>"]
edition = "2018"

[lib]
crate-type = ["cdylib"]

[dependencies]
wavefront_obj = "5.1"
wasm-bindgen = "0.2.33"
js-sys = "0.3.10"

[dependencies.web-sys]
version = "0.3.10"
features = [
  "Document",
  "Element",
  "HtmlCanvasElement",
  "WebGl2RenderingContext",
  "WebGlBuffer",
  "WebGlProgram",
  "WebGlShader",
  "Window",
]

[profile.release]
opt-level = 2
lto = true
